<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:ignore="ContentDescription">

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:layout_marginTop="8dp"
        android:gravity="center_horizontal"
        android:text="@string/black_beans_title"
        android:textColor="@android:color/black"
        android:textSize="24sp"
        android:textStyle="bold"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/photo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scaleType="centerCrop"
            app:srcCompat="@drawable/black_beans"/>

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/previous"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_marginStart="8dp"
            android:src="@drawable/ic_previous"/>

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="8dp"
            android:src="@drawable/ic_next"
            tools:ignore="RelativeOverlap"/>

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:baselineAligned="false"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:layout_weight="40"
            android:orientation="vertical"
            android:paddingEnd="4dp"
            android:paddingStart="0dp">

            <TextView
                android:id="@+id/ingredients_lbl"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="4dp"
                android:text="@string/ingredients"
                android:textColor="@android:color/black"/>

            <TextView
                android:id="@+id/ingredients"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/black_beans_ingredients"
                android:textSize="12sp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="60"
            android:orientation="vertical"
            android:paddingEnd="0dp"
            android:paddingStart="4dp">

            <TextView
                android:id="@+id/description_lbl"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:gravity="center"
                android:text="@string/description"
                android:textColor="@android:color/black"/>

            <TextView
                android:id="@+id/description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/black_beans_description"/>

        </LinearLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/instructions_lbl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="4dp"
        android:text="@string/instructions"
        android:textColor="@android:color/black"/>

    <TextView
        android:id="@+id/instructions"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:text="@string/black_beans_instructions"
        android:textSize="12sp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:orientation="horizontal">

        <CheckBox
            android:id="@+id/made_it"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/made_it"/>

        <CheckBox
            android:id="@+id/liked_it"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="18dp"
            android:layout_marginStart="46dp"
            android:text="@string/liked_it"/>

        <Button
            android:id="@+id/notes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:text="@string/notes"/>

    </LinearLayout>
</LinearLayout>
